--- a/index.html
+++ b/index.html
@@ -10,58 +10,58 @@
 <body>
   <div class="wrapper">
   <div class="sportsman-card">
-    <img class='image'src="/img/001.jfif">
+    <img class='image'src="./img/001.jfif">
     <div class="numb">1    
     </div>
     <div class="name">Floyd Mayweather</div>
   </div>
   <div class="sportsman-card">
-    <img class='image'src="/img/002.jfif">
+    <img class='image'src="./img/002.jfif">
     <div class="numb">2    
     </div>
     <div class="name">Lionel Messi</div>
   </div><div class="sportsman-card">
-    <img class='image'src="/img/003.jfif">
+    <img class='image'src="./img/003.jfif">
     <div class="numb">3     
     </div>
     <div class="name">Cristiano Ronaldo</div>
   </div><div class="sportsman-card">
-    <img class='image'src="/img/004.jfif">
+    <img class='image'src="./img/004.jfif">
     <div class="numb">4    
     </div>
     <div class="name">Conor McGregor</div>
   </div><div class="sportsman-card">
-    <img class='image'src="/img/005.jfif">
+    <img class='image'src="./img/005.jfif">
     <div class="numb">5     
     </div>
     <div class="name">Neymar</div>
   </div>
   <div class="sportsman-card">
-    <img class='image'src="/img/006.jfif">
+    <img class='image'src="./img/006.jfif">
     <div class="numb">6     
     </div>
     <div class="name">LeBron James</div>
   </div>
   <div class="sportsman-card">
-    <img class='image'src="/img/007.jfif">
+    <img class='image'src="./img/007.jfif">
     <div class="numb">7     
     </div>
     <div class="name">Roger Federer</div>
   </div>
   <div class="sportsman-card">
-    <img class='image'src="/img/008.jfif">
+    <img class='image'src="./img/008.jfif">
     <div class="numb">8     
     </div>
     <div class="name">Stephen Curry</div>
   </div>
   <div class="sportsman-card">
-    <img class='image'src="/img/009.jfif">
+    <img class='image'src="./img/009.jfif">
     <div class="numb">9     
     </div>
     <div class="name">Matt Ryan</div>
   </div>
   <div class="sportsman-card">
-    <img class='image'src="/img/010.jfif">
+    <img class='image'src="./img/010.jfif">
     <div class="numb">10     
     </div>
     <div class="name">Matthew Stafford</div>
